{
  "@@locale": "ar",
  "appName": "تبتل",
  "drawerSearch": "البحث المتقدم",
  "drawerSearchSubtitle": "بحث في الآيات والموضوعات",
  "drawerIndex": "الفهرس",
  "drawerIndexSubtitle": "السور والأجزاء",
  "drawerBookmarks": "العلامات المرجعية",
  "drawerBookmarksSubtitle": "الآيات المحفوظة",
  "drawerTafsir": "التفسير الكامل",
  "drawerTafsirSubtitle": "تفسير لجميع الآيات والسور",
  "drawerTranslation": "الترجمة",
  "drawerTranslationSubtitle": "ترجمة لمعاني القرآن",
  "drawerAudioManager": "مدير الصوتيات",
...
  "themeSlate": "رخامي",
  "themeOlive": "زيتوني",
  "themeEmerald": "زمردي",
  "themeSapphire": "كحلي",
  "themeBurgundy": "عنابي",
  "themeDark": "ليلي",
  "themeScrollDirection": "اتجاه التمرير",
  "themeScrollHorizontal": "أفقي",
  "themeScrollVertical": "رأسي",
  "hifzEnableMode": "تفعيل اختبار الحفظ",
  "hifzDisableMode": "إيقاف اختبار الحفظ",
  "hifzMaskFull": "إخفاء الآيات",
  "hifzMaskWord": "إخفاء الكلمات",
...
  "timerStop": "إيقاف المؤقت",
  "timerMinutes5": "5 دقائق",
  "timerMinutes10": "10 دقائق",
  "timerMinutes15": "15 دقيقة",
  "timerMinutes30": "30 دقيقة",
  "timerMinutes60": "60 دقيقة",
  "indexSurahsTab": "السور",
  "indexJuzsTab": "الأجزاء",
  "downloadingTafsir": "جاري تحميل التفسير... {percent}%",
  "@downloadingTafsir": {
    "placeholders": {
      "percent": {
        "type": "int"
      }
...
